syntax = "proto3";

package register.service.v1;

option go_package = "api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Register {
    rpc RegAsGRPC(RegSvcReqs) returns (.google.protobuf.Empty);
    rpc RegAsHTTP(RegSvcReqs) returns (RegSvcResp);
    rpc Cancel(IdenSvcReqs) returns (.google.protobuf.Empty);
    // 添加路由只针对HTTP服务
    rpc AddRoutes(AddRoutesReqs) returns (AddRoutesResp);
    rpc AddRoute(AddRouteReqs) returns (Route);
}

message RegSvcReqs {
    string appID = 1;
    repeated string urls = 2;
}

message RegSvcResp {
    string kongID = 1;
}

message IdenSvcReqs {
    string appID = 1;
}

message AddRoutesReqs {
    string serviceID = 1;
    bytes paths = 2; // 对应由Protoc生成的swagger.json文件的paths字段
}

message AddRouteReqs {
    string serviceID = 1;
    Route route = 2;
}

message Route {
    string id = 1;
    string name = 2;
    string path = 3;
    string method = 4;
}

message AddRoutesResp {
    repeated Route routes = 1;
}